--- a/src/main/resources/application-pdn.properties
+++ b/src/main/resources/application-pdn.properties
@@ -1,4 +1,4 @@
-server.port=80
-spring.datasource.url=jdbc://postgresql://localhost:5432/gsas-market
-spring.datasource.username=postgres
-spring.datasource.password=admin
+server.port=${PORT}
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
